@@ -1,6 +1,6 @@
 Recent user-visible changes to Jacl & Tcl Blend:
 
-RCS: @(#) $Id: changes.txt,v 1.40.2.2 2000/03/30 09:03:41 mo Exp $
+RCS: @(#) $Id: changes.txt,v 1.40.2.3 2000/04/01 10:31:57 mo Exp $
 
 ----------------- Released 1.0a1, 10/22/97 -----------------------
 
@@ -1035,6 +1035,12 @@ fix was back ported from the 1.3 version.
 
 04/01/2000 (back ported pyramidpkg fix)
 The pyramidpkg demo is now only supplied with Jacl.
+
+04/02/2000 (back ported ReflectObject error msg cleanup)
+A number of error message fixups in the ReflectObject class
+from the 1.3 version were back ported to the 1.2 branch. None
+of these error messages were user visible, they would only
+happen when a JVM bug was encountered.
 
 ----------------- Released 1.2.6, XX/XX/XX -----------------------
 
